--- a/cucumber.yaml
+++ b/cucumber.yaml
@@ -2,7 +2,7 @@
 default: -p html -p dot -p chrome
 ci: -p headless -p dot -p json
 html: --format html --out=log/reports.html
-json: --fotmat json --out=log/reports.json
+json: --format json --out=log/reports.json
 bdd: --format pretty
 dot: --format progress
 headless: BROWSER=headless
